Added new API call - v1/store/mine - to get personal store, if exists
